2020-09-25	v0.2.2
Improve support for Dynamic C 9 pilot.bin, replace command-line option for Dynamic C 8 pilot.bin format by autodetection. Add --verbose option to control verbosity.

2020-09-20	v0.2.1
Improve speed. Command-line option for Dynamic C 8 pilot.bin format.

2020-09-15	v0.2.0
Build own coldload.bin. Use Dynamic C 9 pilot.bin format instead of Dynamic C 8 one. Drop unused RFU arguments.

2020-09-14	v0.1.2
Update for current autotools and ncurses. Fixes to make it work with USB serial converter.

2004-07-28	v0.1.1
Creation of a decent project with automake/autoconf.

2004-06-14	v0.1.0
Extension of ncurses based debugger.

2004-06-04	v0.0.1
First implementation of the RFU.
